--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,5 @@
 useDynLib(biovar, .registration=TRUE)
 importFrom(Rcpp, evalCpp)
+import(data.table)
+import(ggplot2)
 exportPattern("^[[:alpha:]]+")
