--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,6 @@ useDynLib(biovar, .registration=TRUE)
 importFrom(Rcpp, evalCpp)
 import(data.table)
 import(ggplot2)
+import(tools)
+importFrom("stats", "median", "quantile", "rnorm", "sd")
 exportPattern("^[[:alpha:]]+")
