--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ import(data.table)
 import(ggplot2)
 import(tools)
 importFrom("stats", "median", "quantile", "rnorm", "sd")
+importFrom("truncnorm", "rtruncnorm")
 exportPattern("^[[:alpha:]]+")
